created perlin noise class

--- a/ErosionGL/ErosionGL.vcxproj
+++ b/ErosionGL/ErosionGL.vcxproj
@@ -128,6 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ErosionGL.cpp" />
+    <ClCompile Include="FilePPM.cpp" />
+    <ClCompile Include="Perlin.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FilePPM.h" />
+    <ClInclude Include="Perlin.h" />
+    <ClInclude Include="RGB.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
