made a tile class and methode for turning into RGB

--- a/ErosionGL/ErosionGL.vcxproj
+++ b/ErosionGL/ErosionGL.vcxproj
@@ -130,11 +130,13 @@
     <ClCompile Include="ErosionGL.cpp" />
     <ClCompile Include="FilePPM.cpp" />
     <ClCompile Include="Perlin.cpp" />
+    <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FilePPM.h" />
     <ClInclude Include="Perlin.h" />
     <ClInclude Include="RGB.h" />
+    <ClInclude Include="Tile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
