--- a/ErosionGL/ErosionGL.vcxproj.filters
+++ b/ErosionGL/ErosionGL.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Tile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MapTile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FilePPM.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Tile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MapTile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
